<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:padding="5dp">

    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/light_grey"
        android:padding="10dp"
        android:textSize="48sp"
        android:textColor="@color/black"
        android:gravity="end|bottom"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnSeven"
            android:layout_margin="3dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/seven"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btnEight"
            android:layout_margin="3dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/eight"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml"/>

        <Button
            android:id="@+id/btnNine"
            android:layout_margin="3dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/nine"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml"/>

        <Button
            android:id="@+id/btnDivide"
            android:layout_margin="3dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/divide"
            android:onClick="onOperator"
            tools:ignore="UsingOnClickInXml"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnFour"
            android:layout_margin="3dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/four"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml"/>

        <Button
            android:id="@+id/btnFive"
            android:layout_margin="3dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/five"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml"/>

        <Button
            android:id="@+id/btnSix"
            android:layout_margin="3dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/six"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml"/>

        <Button
            android:id="@+id/btnMultiply"
            android:layout_margin="3dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/multiply"
            android:onClick="onOperator"
            tools:ignore="UsingOnClickInXml"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnOne"
            android:layout_margin="3dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/one"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml"/>

        <Button
            android:id="@+id/btnTwo"
            android:layout_margin="3dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/two"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml"/>

        <Button
            android:id="@+id/btnThree"
            android:layout_margin="3dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/three"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml"/>

        <Button
            android:id="@+id/btnSubtract"
            android:layout_margin="3dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/subtract"
            android:onClick="onOperator"
            tools:ignore="UsingOnClickInXml"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnZero"
            android:layout_margin="3dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/zero"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml"/>

        <Button
            android:id="@+id/btnDecimal"
            android:layout_margin="3dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/decimal"
            android:onClick="onDecimalPoint"
            tools:ignore="UsingOnClickInXml"/>

        <Button
            android:id="@+id/btnClear"
            android:layout_margin="3dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/clear"
            android:onClick="onCLear"
            tools:ignore="UsingOnClickInXml"/>

        <Button
            android:id="@+id/btnAdd"
            android:layout_margin="3dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/add"
            android:onClick="onOperator"
            tools:ignore="UsingOnClickInXml"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnEqualTo"
            android:layout_margin="3dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/equalTo"
            android:onClick="onEqual"
            tools:ignore="UsingOnClickInXml"/>

    </LinearLayout>

</LinearLayout>
